--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "acme": {
+    "angular16-acme": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,27 +17,22 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/acme/browser",
+            "outputPath": "dist/angular16-acme/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/bootstrap/scss/bootstrap.scss"
+              "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -70,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "acme:build:production"
+              "browserTarget": "angular16-acme:build:production"
             },
             "development": {
-              "browserTarget": "acme:build:development"
+              "browserTarget": "angular16-acme:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "acme:build"
+            "browserTarget": "angular16-acme:build"
           }
         },
         "test": {
@@ -92,6 +87,7 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -105,17 +101,14 @@
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
-            "outputPath": "dist/acme/server",
+            "outputPath": "dist/angular16-acme/server",
             "main": "server.ts",
-            "tsConfig": "tsconfig.server.json"
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
           },
           "configurations": {
             "production": {
-              "outputHashing": "media",
-              "buildOptimizer": true,
-              "optimization": true,
-              "extractLicenses": true,
-              "vendorChunk": true
+              "outputHashing": "media"
             },
             "development": {
               "buildOptimizer": false,
@@ -131,12 +124,12 @@
           "builder": "@nguniversal/builders:ssr-dev-server",
           "configurations": {
             "development": {
-              "browserTarget": "acme:build:development",
-              "serverTarget": "acme:server:development"
+              "browserTarget": "angular16-acme:build:development",
+              "serverTarget": "angular16-acme:server:development"
             },
             "production": {
-              "browserTarget": "acme:build:production",
-              "serverTarget": "acme:server:production"
+              "browserTarget": "angular16-acme:build:production",
+              "serverTarget": "angular16-acme:server:production"
             }
           },
           "defaultConfiguration": "development"
@@ -150,12 +143,12 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "acme:build:production",
-              "serverTarget": "acme:server:production"
+              "browserTarget": "angular16-acme:build:production",
+              "serverTarget": "angular16-acme:server:production"
             },
             "development": {
-              "browserTarget": "acme:build:development",
-              "serverTarget": "acme:server:development"
+              "browserTarget": "angular16-acme:build:development",
+              "serverTarget": "angular16-acme:server:development"
             }
           },
           "defaultConfiguration": "production"
